Legalize chromium's directory sort

The sorting function was violating that 'a' can never be smaller than
'a'. That is assert(!(a < a)).

Task-number: QTBUG-59242
Change-Id: I8a6ad3a4017ec7a564261222b2f924058f671423
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>